# youtube-summary-telegram-bot

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.json  reviewer-demo.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  summarizer.py  telegram_bot.py  transcriber.py  youtube.py
scripts/: config_check.py  smoke_demo.py
tests/: test_config_check.py  test_formatting.py  test_smoke_demo.py  test_summarizer.py  test_youtube.py
