[project]
name = "youtube-summary-telegram-bot"
version = "0.1.0"
description = "Telegram bot that summarizes YouTube videos with Whisper transcripts."
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.1",
    "python-telegram-bot>=21.10",
    "yt-dlp>=2025.12.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
